--- a/BTW.Web/BTW.Web.Client/BTW.Web.Client.csproj
+++ b/BTW.Web/BTW.Web.Client/BTW.Web.Client.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Pages\Shared\ProductsList.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.5" />
   </ItemGroup>
