add prodcut / brand features added

--- a/BTW.Web/BTW.Web/appsettings.json
+++ b/BTW.Web/BTW.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BTW.Web-bb221225-25d8-4255-8e38-b18410ad102a;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=bt-db-1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
