--- a/BT.Admin/BT.Admin.csproj
+++ b/BT.Admin/BT.Admin.csproj
@@ -1,9 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1568bee0-febd-4a74-ad86-fefb154b1cfd</UserSecretsId>
   </PropertyGroup>
+
+<ItemGroup>
+	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
+	<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.7" />
+	<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.7" />
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.7" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.7" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
+		<PrivateAssets>all</PrivateAssets>
+		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
+</ItemGroup>
+	
+  <ItemGroup>
+    <ProjectReference Include="..\BT.Core\BT.Core.csproj" />
+    <ProjectReference Include="..\BT.Datastore.EFCore\BT.Datastore.EFCore.csproj" />
+    <ProjectReference Include="..\BT.UseCases\BT.UseCases.csproj" />
+  </ItemGroup>
 
 </Project>
