--- a/BT.Datastore.EFCore/BT.Datastore.EFCore.csproj
+++ b/BT.Datastore.EFCore/BT.Datastore.EFCore.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\BT.Core\BT.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\Account\" />
+  </ItemGroup>
+
 </Project>
